AND-411: Switched to DefaultHttpClient for file downloads. HttpUrlConnection appears to fail for certain types of files.